--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "karma-coverage": "~0.5.2",
     "karma-jasmine": "~0.3.6",
     "karma-ng-html2js-preprocessor": "~0.2.0",
-    "karma-phantomjs-launcher": "~0.2.1",
+    "karma-phantomjs-launcher": "~1.0.0",
     "lodash": "~3.10.1",
     "main-bower-files": "~2.9.0",
     "opn": "^4.0.1",
-    "phantomjs": "~1.9.18",
+    "phantomjs-prebuilt": "~2.1.7",
     "ssl-root-cas": "^1.1.10",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~2.2.2",
