--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "ng-idle": "~1.2.0",
     "angular-stored-object": "~1.0.7",
     "angular-validation-match": "~1.7.1",
-    "angular-ellipsis": "^0.1.6"
+    "angular-ellipsis": "^0.1.6",
+    "angular-diff-match-patch": "^0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
