--- a/bower.json
+++ b/bower.json
@@ -18,12 +18,14 @@
     "angular-stored-object": "~1.0.7",
     "angular-validation-match": "~1.7.1",
     "angular-ellipsis": "^0.1.6",
-    "angular-diff-match-patch": "^0.2.2"
+    "angular-diff-match-patch": "^0.2.2",
+    "mdPickers": "^0.7.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
   },
   "resolutions": {
-    "angular": "~1.5.0"
+    "angular": "~1.5.0",
+    "moment": "~2.11.1"
   }
 }
