--- a/bower.json
+++ b/bower.json
@@ -1,31 +1,32 @@
 {
   "name": "glass",
   "dependencies": {
-    "angular-animate": "~1.5.0",
-    "angular-cookies": "~1.5.0",
-    "angular-touch": "~1.5.0",
-    "angular-sanitize": "~1.5.0",
-    "angular-messages": "~1.5.0",
-    "angular-aria": "~1.5.0",
-    "angular-resource": "~1.5.0",
-    "angular-ui-router": "~0.2.18",
-    "angular-material": "~1.0.8",
+    "angular-animate": "~1.5.8",
+    "angular-cookies": "~1.5.8",
+    "angular-touch": "~1.5.8",
+    "angular-sanitize": "~1.5.8",
+    "angular-messages": "~1.5.8",
+    "angular-aria": "~1.5.8",
+    "angular-resource": "~1.5.8",
+    "angular-ui-router": "~0.3.1",
+    "angular-material": "~1.1.1",
     "material-design-iconfont": "~0.0.2",
-    "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
-    "angular": "~1.5.0",
-    "ng-idle": "~1.2.0",
+    "angular-toastr": "~2.1.1",
+    "moment": "~2.14.1",
+    "angular": "~1.5.8",
+    "ng-idle": "~1.3.0",
     "angular-stored-object": "~1.0.7",
-    "angular-validation-match": "~1.7.1",
-    "angular-ellipsis": "^0.1.6",
-    "angular-diff-match-patch": "^0.2.2",
+    "angular-validation-match": "~1.9.0",
+    "angular-ellipsis": "~0.1.6",
+    "angular-diff-match-patch": "~0.4.0",
     "mdPickers": "^0.7.5"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.0"
+    "angular-mocks": "~1.5.8"
   },
   "resolutions": {
-    "angular": "~1.5.0",
-    "moment": "~2.11.1"
+    "moment": "~2.14.1",
+    "angular-material": "~1.1.1",
+    "angular": "~1.5.8"
   }
 }
