--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-phantomjs-launcher": "~1.0.0",
     "lodash": "~3.10.1",
     "main-bower-files": "~2.9.0",
+    "node-offline-localhost": "^0.9.0",
     "opn": "^4.0.1",
     "phantomjs-prebuilt": "~2.1.7",
     "ssl-root-cas": "^1.1.10",
