--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "browser-sync": "~2.9.11",
     "browser-sync-spa": "~1.0.3",
+    "buffer-to-vinyl": "~1.1.0",
     "chalk": "~1.1.1",
     "del": "~2.0.2",
     "eslint-plugin-angular": "~0.12.0",
@@ -24,6 +25,7 @@
     "gulp-minify-css": "~1.2.1",
     "gulp-minify-html": "~1.0.4",
     "gulp-ng-annotate": "~1.1.0",
+    "gulp-ng-config": "~1.5.0",
     "gulp-protractor": "~1.0.0",
     "gulp-rename": "~1.2.2",
     "gulp-replace": "~0.5.4",
@@ -47,7 +49,6 @@
     "node-offline-localhost": "^0.9.0",
     "opn": "^4.0.1",
     "phantomjs-prebuilt": "~2.1.7",
-    "ssl-root-cas": "^1.1.10",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~2.2.2",
     "wrench": "~1.5.8"
