--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "~3.10.1",
     "main-bower-files": "~2.9.0",
     "node-offline-localhost": "^0.9.0",
+    "node-sass": "^4.7.2",
     "opn": "^4.0.1",
     "phantomjs-prebuilt": "~2.1.7",
     "uglify-save-license": "~0.4.1",
