--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
   "name": "glass",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
-    "start": "gulp serve",
-    "test": "gulp test"
+    "build": "rimraf dist && webpack --bail --progress --profile",
+    "server": "webpack-dev-server --history-api-fallback --inline --progress",
+    "test": "karma start",
+    "test-watch": "karma start --auto-watch --no-single-run",
+    "start": "npm run server"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.12",
+    "angular": "^1.6.8",
+    "angular-animate": "^1.6.8",
+    "angular-aria": "^1.6.8",
+    "angular-cookies": "^1.6.8",
+    "angular-diff-match-patch": "^0.6.10",
+    "angular-ellipsis": "^1.0.1",
+    "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.8",
+    "angular-resource": "^1.6.8",
+    "angular-sanitize": "^1.6.8",
+    "angular-stored-object": "^1.0.10",
+    "angular-validation-match": "^1.9.0",
+    "material-design-icons-iconfont": "^3.0.3",
+    "mdPickers": "^0.7.5",
+    "moment": "^2.20.1",
+    "ng-idle": "^1.3.2"
   },
   "devDependencies": {
-    "browser-sync": "~2.9.11",
-    "browser-sync-spa": "~1.0.3",
-    "buffer-to-vinyl": "~1.1.0",
-    "chalk": "~1.1.1",
-    "del": "~2.0.2",
-    "eslint-plugin-angular": "~0.12.0",
-    "estraverse": "~4.1.0",
-    "gulp": "~3.9.0",
-    "gulp-angular-filesort": "~1.1.1",
-    "gulp-angular-templatecache": "~1.8.0",
-    "gulp-autoprefixer": "~3.0.2",
-    "gulp-eslint": "~1.0.0",
-    "gulp-filter": "~3.0.1",
-    "gulp-flatten": "~0.2.0",
-    "gulp-inject": "~3.0.0",
-    "gulp-load-plugins": "~0.10.0",
-    "gulp-minify-css": "~1.2.1",
-    "gulp-minify-html": "~1.0.4",
-    "gulp-ng-annotate": "~1.1.0",
-    "gulp-ng-config": "~1.5.0",
-    "gulp-protractor": "~1.0.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-replace": "~0.5.4",
-    "gulp-rev": "~6.0.1",
-    "gulp-rev-replace": "~0.4.2",
-    "gulp-sass": "~2.0.4",
-    "gulp-size": "~2.0.0",
-    "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.4.1",
-    "gulp-useref": "~1.3.0",
-    "gulp-util": "~3.0.6",
-    "http-proxy-middleware": "~0.9.0",
-    "karma": "~0.13.10",
-    "karma-angular-filesort": "~1.0.0",
-    "karma-coverage": "~0.5.2",
-    "karma-jasmine": "~0.3.6",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
-    "karma-phantomjs-launcher": "~1.0.0",
-    "lodash": "~3.10.1",
-    "main-bower-files": "~2.9.0",
-    "node-offline-localhost": "^0.9.0",
+    "angular-mocks": "^1.6.8",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "copy-webpack-plugin": "^4.3.1",
+    "css-loader": "^0.28.8",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^2.0.9",
+    "node-libs-browser": "2.1.0",
     "node-sass": "^4.7.2",
-    "opn": "^4.0.1",
-    "phantomjs-prebuilt": "~2.1.7",
-    "uglify-save-license": "~0.4.1",
-    "wiredep": "~2.2.2",
-    "wrench": "~1.5.8"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.10",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-server": "^2.10.0"
   }
 }
