--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^2.0.9",
+    "ng-annotate-loader": "^0.6.1",
     "node-libs-browser": "2.1.0",
     "node-sass": "^4.7.2",
     "null-loader": "^0.1.1",
