--- a/package.json
+++ b/package.json
@@ -9,59 +9,61 @@
     "start": "npm run server"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.12",
-    "angular": "^1.6.8",
-    "angular-animate": "^1.6.8",
-    "angular-aria": "^1.6.8",
-    "angular-cookies": "^1.6.8",
-    "angular-diff-match-patch": "^0.6.10",
+    "@uirouter/angularjs": "^1.0.14",
+    "angular": "^1.6.9",
+    "angular-animate": "^1.6.9",
+    "angular-aria": "^1.6.9",
+    "angular-cookies": "^1.6.9",
+    "angular-diff-match-patch": "github:yaacovCR/angular-diff-match-patch",
     "angular-ellipsis": "^1.0.1",
-    "angular-material": "^1.1.5",
-    "angular-messages": "^1.6.8",
-    "angular-resource": "^1.6.8",
-    "angular-sanitize": "^1.6.8",
+    "angular-material": "^1.1.8",
+    "angular-messages": "^1.6.9",
+    "angular-resource": "^1.6.9",
+    "angular-sanitize": "^1.6.9",
     "angular-stored-object": "^1.0.10",
     "angular-validation-match": "^1.9.0",
+    "diff-match-patch": "^1.0.0",
     "material-design-icons-iconfont": "^3.0.3",
     "mdPickers": "^0.7.5",
-    "moment": "^2.20.1",
+    "moment": "^2.21.0",
     "ng-idle": "^1.3.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.6.8",
+    "angular-mocks": "^1.6.9",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.8",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
+    "jasmine-core": "^2.99.1",
     "karma": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^2.0.9",
+    "karma-webpack": "^2.0.13",
     "ng-annotate-loader": "^0.6.1",
     "node-libs-browser": "2.1.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "null-loader": "^0.1.1",
     "open-browser-webpack-plugin": "0.0.5",
     "phantomjs-prebuilt": "^2.1.16",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.10",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-server": "^2.10.0"
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-server": "^2.11.1"
   }
 }
